--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 25 year of code fragments (and the occasional complete program)
+
+First up, connect4 from 1993
+This was actually a rewrite of a university project from 1990.
