--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 25 year of code fragments (and the occasional complete program)
 
-First up, connect4 from 1993
+First up, connect4 from 1991
 This was actually a rewrite of a university project from 1990.
+
+Next: collatz and four-fours. Also from 1991.
