--- a/README
+++ b/README
@@ -4,3 +4,5 @@ First up, connect4 from 1991
 This was actually a rewrite of a university project from 1990.
 
 Next: collatz and four-fours. Also from 1991.
+
+Still 1991. We have a C++ lambda calculus interpreter. "twice square 7" -> 2401 
