--- a/README
+++ b/README
@@ -6,3 +6,5 @@ This was actually a rewrite of a university project from 1990.
 Next: collatz and four-fours. Also from 1991.
 
 Still 1991. We have a C++ lambda calculus interpreter. "twice square 7" -> 2401 
+
+More 1991: anagram-puzzle, unification-in-lisp.
